# 2025-BIAI

./: .envrc  .gitignore  README.md  flake.nix  justfile  pyproject.toml
nix/: pyproject-overrides.nix  shell.nix
notebooks/: basic_bioinformatics.ipynb  foundation_model.ipynb  sequence_distance.ipynb
notebooks/.ipynb_checkpoints/: basic_bioinformatics-checkpoint.ipynb  foundation_model-checkpoint.ipynb
notebooks/data/: gfp.fasta
