[project]
name = "BIAI2025"
version = "0.0.1"
description = "project description"
readme = "README.md"
requires-python = ">=3.12"

authors = [{ name = "mulatta" }]

maintainers = [
  { name = "Seungwon Lee", email = "67085791+mulatta@users.noreply.github.com" },
]

dependencies = [
    "esm>=3.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "plotly>=6.1.1",
    "textdistance>=4.6.3",
]

[project.urls]
Repository = "https://github.com/mulatta"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["notebooks*", "data*"]
